# vlm

./: .gitignore  README.md  config.example.yaml  config.import-only.example.yaml  config.import-vlm.example.yaml  copilot-instructions.md  local.verify.yaml  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v1.0-v1.0-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: report-format-ann-id-only.md  vlm-keypoint-visibility.md
.planning/graphs/: .last-build-snapshot.json  GRAPH_REPORT.md  graph.html  graph.json
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
scripts/: crop_validate.py
src/: main.py
src/fiftyone_pose_importer/: __init__.py  cli.py  config_loader.py  config_model.py  datumaro_reader.py  image_index.py  matching.py  pose_contract.py  preflight.py  run_import.py  run_verify.py  summary.py
tests/crop_validate/: test_apply_vlm.py  test_fo_sample.py  test_helpers.py  test_integration.py  test_report.py  test_vlm_parse.py
tests/phase2/: test_pose_contract_preflight.py  test_pose_mapping_import.py
tests/phase4/: test_launch_behavior.py  test_run_summary_schema.py
tests/phase5/: test_contracts_preflight.py
tests/phase6/: test_cropper.py  test_reporting.py  test_rules_engine.py  test_run_verify.py  test_verification_config.py  test_verification_types.py
tests/phase7/: test_report_vlm.py  (+6 more)
(+109 files in other folders)
