[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fiftyone-datumaro-importer"
version = "0.1.0"
description = "Config-driven local importer for image folders + Datumaro JSON into FiftyOne"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fiftyone>=1.0.0",
  "pydantic>=2.0.0",
  "PyYAML>=6.0.0",
]

[project.scripts]
fiftyone-datumaro-import = "fiftyone_pose_importer.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
